# talks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  Gemfile  Makefile  README.md  bio.md  cadcx_markdownlint_style.rb  recordings.md
.github/: FUNDING.yml  dependabot.yml
_drafts_and_notes/: README.md
_lightning/: elsewhere.md
_retired/: README.md
_retired/_reviews/codemash2023_review/tdd/: pyproject.toml
_template/: Brewfile  Makefile  Procfile  copier.yml  notes.md.jinja  peru.yaml.jinja  presentation.md.jinja  {{_copier_conf.answers_file}}.jinja
bitcoin-technical/: bitcoin-technical.md  start.sh
build_your_own_bf/: notes.md
cli_exploration/: notes.md  notes.txt
code_review/: Code Review is an Architectural Necessity - Colin Dean - Winter 2022-2023.key  GithubUniverse2016.md  code_reviews.md  learning_chart.dot  notes.txt  references_and_see-also.md  saturn2016.md
codeandsupply_comp_survey_2022_engine/: .gitignore  README.md  presentation.md  submissions.md
document_workflow/: .gitignore  Brewfile  Makefile  Procfile  README.md  custom.css  document_workflow.md  notes.md  peru.yaml  submissions.md
effective_communication/: notes.md
eight_easy_steps/: eight_easy_steps.md
historical_modeling_with_rust/: notes.md  proposals.md
intro_to_git/: .gitignore  Brewfile  Makefile  README.md  custom.css  embedded_graphviz.lua  intro_to_git.md  peru.yaml
intro_to_plaintextaccounting/: Makefile  build_html.sh  exercise1.ledger  exercise2.pricedb  exercise3.ledger  plaintextaccounting.key  styles.css  submissions.md  timekeeping.ledger  (+1 more)
(+158 files in other folders)
