[tool.poetry]
name = "tdd-workshop"
version = "0.1.0"
description = "shut up warnings"
authors = [
    "Colin Dean <colin.dean@target.com>",
]

[tool.poetry.dependencies]
python = ">3.9,<=4.0"

[tool.poetry.dev-dependencies]
pytest = ">=7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
